--- a/toml/test-crud.toml
+++ b/toml/test-crud.toml
@@ -11,7 +11,8 @@ Operations = [ { url = "/todo/all" , request = "ReadAllRequest" , response = "Re
 
 
 [Models]
-Model = [{ name = "ReadAllRequest" , Variable = [{ name = "v1", value = "1" , type = "string"  }] },
+Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"  },{ name = "title", value = "1" , type = "string"  }] },
+        { name = "ReadAllRequest" , Variable = [{ name = "v1", value = "1" , type = "string"  }] },
         { name = "ReadAllResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDos", value = "1" , type = "repeated" } ] },
         { name = "CreateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "1" , type = "object" }] },
         { name = "CreateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
