--- a/toml/test-crud.toml
+++ b/toml/test-crud.toml
@@ -12,13 +12,13 @@ Operations = [ { url = "/todo/all" , request = "ReadAllRequest" , response = "Re
 
 [Models]
 Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"  },{ name = "title", value = "1" , type = "string"  }] },
-        { name = "ReadAllRequest" , Variable = [{ name = "v1", value = "1" , type = "string"  }] },
-        { name = "ReadAllResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDos", value = "1" , type = "repeated" } ] },
-        { name = "CreateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "1" , type = "object" }] },
+        { name = "ReadAllRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  }] },
+        { name = "ReadAllResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDos", value = "list" , type = "repeated" } ] },
+        { name = "CreateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
         { name = "CreateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
-        { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "1" , type = "object" }] },
+        { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
         { name = "UpdateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "updated", value = "1" , type = "int" }] },
         { name = "DeleteRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
         { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "1" , type = "int" }] },
         { name = "ReadRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
-        { name = "ReadResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "1" , type = "object" }] } ]
+        { name = "ReadResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] } ]
