--- a/toml/test-crud.toml
+++ b/toml/test-crud.toml
@@ -4,7 +4,7 @@
 Name = "Test"
 Operations = [ { url = "/todo/all" , request = "ReadAllRequest" , response = "ReadAllResponse", protocol = "GET" , operationid  = "ReadAll"},
                { url = "/todo" , request = "CreateRequest" , response = "CreateResponse", protocol = "POST" , operationid  = "Create"},
-               { url = "/todo/{toDo.id}" , request = "UpdateRequest" , response = "UpdateResponse", protocol = "PUT" , operationid  = "Update"},
+               { url = "/todo/{id}" , request = "UpdateRequest" , response = "UpdateResponse", protocol = "PUT" , operationid  = "Update"},
                { url = "/todo/{id}" , request = "DeleteRequest" , response = "DeleteResponse", protocol = "DELETE" , operationid  = "Delete"},
                { url = "/todo/{id}" , request = "ReadRequest" , response = "ReadResponse", protocol = "GET" , operationid  = "Read"}]
 
@@ -16,7 +16,7 @@ Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"
         { name = "ReadAllResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDos", value = "list" , type = "repeated" } ] },
         { name = "CreateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
         { name = "CreateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
-        { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
+        { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
         { name = "UpdateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "updated", value = "1" , type = "int" }] },
         { name = "DeleteRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
         { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "1" , type = "int" }] },
