--- a/toml/test-crud.toml
+++ b/toml/test-crud.toml
@@ -22,3 +22,11 @@ Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"
         { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "1" , type = "int" }] },
         { name = "ReadRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
         { name = "ReadResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] } ]
+
+[DomainModels]
+DomainModel = [{ name = "ToDoDomain" , Variable = [{ name = "Sno", value = "1" , type = "int"  },{ name = "Description", value = "1" , type = "string"  }] }]
+
+
+[Mapping]
+Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomain" , to = "ToDo" , type="domain2dto", VariableMapping = [{ from = "Sno", to = "Id"   },{ from = "Description", to = "Title"  }]},
+     { name = "convertToDoToDoDomain" , from = "ToDo" , to = "ToDoDomain" , type="dto2domain", VariableMapping = [{ from = "Id", to = "Sno" },{ from = "Title", to = "Description" }]} ]
