--- a/toml/test-crud.toml
+++ b/toml/test-crud.toml
@@ -19,7 +19,7 @@ Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"
         { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
         { name = "UpdateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "updated", value = "1" , type = "int" }] },
         { name = "DeleteRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
-        { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "1" , type = "int" }] },
+        { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "true" , type = "boolean" }] },
         { name = "ReadRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
         { name = "ReadResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] } ]
 
