Command Handler Added Refactored Event Handler

--- a/toml/todo-es.toml
+++ b/toml/todo-es.toml
@@ -1,7 +1,7 @@
 # This is a TOML Support CRUD & EventSourcing Architechture
 
 [Architechture]
-Name = "crud"
+Name = "es"
 
 [API]
 Name = "Test"
@@ -33,3 +33,8 @@ DomainModel = [{ name = "ToDoDomains" , Variable = [{ name = "Sno", value = "1" 
 [Mapping]
 Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomains" , to = "ToDo" , type="domain2dto", VariableMapping = [{ from = "Sno", to = "Id"   },{ from = "Description", to = "Title"  }]},
      { name = "convertToDoToDoDomain" , from = "ToDo" , to = "ToDoDomains" , type="dto2domain", VariableMapping = [{ from = "Id", to = "Sno" },{ from = "Title", to = "Description" }]} ]
+
+[CommandToEvent]
+Command =  [{name = "TestCreateCommand", events= [{name = "CreateToDoDomainsEvent"}]},
+            {name = "TestUpdateCommand", events= [{name = "UpdateToDoDomainsEvent"}]},
+            {name = "TestDeleteCommand", events= [{name = "DeleteToDoDomainsEvent"}]}]
