--- a/toml/todo-es-async.toml
+++ b/toml/todo-es-async.toml
@@ -18,11 +18,11 @@ Model = [{ name = "ToDo" , Variable = [{ name = "id", value = "1" , type = "int"
         { name = "ReadAllRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  }] },
         { name = "ReadAllResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDos", value = "list" , type = "repeated" } ] },
         { name = "CreateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
-        { name = "CreateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
+        { name = "CreateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "uuid", value = "uuid" , type = "string" }] },
         { name = "UpdateRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] },
-        { name = "UpdateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "updated", value = "1" , type = "int" }] },
+        { name = "UpdateResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "uuid", value = "uuid" , type = "string" }] },
         { name = "DeleteRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
-        { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "deleted", value = "true" , type = "boolean" }] },
+        { name = "DeleteResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "uuid", value = "uuid" , type = "string" }] },
         { name = "ReadRequest" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "id", value = "1" , type = "int" }] },
         { name = "ReadResponse" , Variable = [{ name = "v1", value = "1" , type = "int"  },{ name = "toDo", value = "toDo" , type = "object" }] } ]
 
@@ -31,8 +31,8 @@ DomainModel = [{ name = "ToDoDomains" , Variable = [{ name = "Sno", value = "1" 
 
 
 [Mapping]
-Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomains" , to = "ToDo" , type="domain2dto", VariableMapping = [{ from = "Sno", to = "Id"   },{ from = "Description", to = "Title"  }]},
-     { name = "convertToDoToDoDomain" , from = "ToDo" , to = "ToDoDomains" , type="dto2domain", VariableMapping = [{ from = "Id", to = "Sno" },{ from = "Title", to = "Description" }]} ]
+Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomains" , to = "ToDo" , type="domain2dto", VariableMapping = [{ from = "Sno", to = "Id" , type="int"   },{ from = "Description", to = "Title"  }]},
+     { name = "convertToDoToDoDomain" , from = "ToDo" , to = "ToDoDomains" , type="dto2domain", VariableMapping = [{ from = "Id", to = "Sno" , type="int" },{ from = "Title", to = "Description" }]} ]
 
 [CommandToEvent]
 Command =  [{name = "TestCreateCommand", events= [{name = "ToDoDomainsEventCreated"}]},
