--- a/toml/todo-es-async-eh.toml
+++ b/toml/todo-es-async-eh.toml
@@ -31,5 +31,5 @@ DomainModel = [{ name = "ToDoDomains" , Variable = [{ name = "Sno", value = "1" 
 
 
 [Mapping]
-Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomains" , to = "ToDo" , type="domain2dto", VariableMapping = [{ from = "Sno", to = "Id" , type="int"   },{ from = "Description", to = "Title"  }]},
+Map = [{ name = "convertToDoDomainToDo" , from = "ToDoDomains" , to = "ToDo" , type="domain2dto" , primary = "Sno" , primarytype = "int", VariableMapping = [{ from = "Sno", to = "Id" , type="int"   },{ from = "Description", to = "Title"  }]},
      { name = "convertToDoToDoDomain" , from = "ToDo" , to = "ToDoDomains" , type="dto2domain", VariableMapping = [{ from = "Id", to = "Sno" , type="int" },{ from = "Title", to = "Description" }]} ]
