Read me added es-async-with-cqrs es-async-with-cqrs-read es-cqrs-eventstore-read es-async-with-cqrs-cmd-event-handler-cud es-async-cmdhandler-with-cqrs es-async-eventhandler-with-cqrs es-sync-without-cqrs

--- a/toml/todo-es.toml
+++ b/toml/todo-es.toml
@@ -4,7 +4,7 @@
 Name = "es"
 
 [API]
-Name = "Test"
+Name = "Todo"
 Operations = [ { url = "/todo/all" , request = "ReadAllRequest" , response = "ReadAllResponse", protocol = "GET" , operationid  = "ReadAll"},
                { url = "/todo" , request = "CreateRequest" , response = "CreateResponse", protocol = "POST" , operationid  = "Create"},
                { url = "/todo/{id}" , request = "UpdateRequest" , response = "UpdateResponse", protocol = "PUT" , operationid  = "Update"},
