Added liquibase along the code generation as option 1. Generates the liquibase change log

--- a/gogconfig.toml
+++ b/gogconfig.toml
@@ -1,6 +1,7 @@
 [Gogenetic]
 TomlDir = "/Users/anharay/workspace/gogenetic/toml/todo.toml"
 OutDir = "output"
-Lang = "java"
+Lang = "go"
 TemplateFile= "" 
 ArchType= "crud"
+DbType = "mysql"
