Docker update for liquibase

--- a/config/liquibase/liquibase-arch-config.toml
+++ b/config/liquibase/liquibase-arch-config.toml
@@ -8,5 +8,6 @@ name =  "mysql"
 templateBasePath = "liquibase/"
 templates = [
 		"liquibasetemplate.tpl"
+		,"docker/dockertemplate.tpl"
 ]
 OutputDir="/sql"
